RESOLVED FIXED162895
[Fetch API] ReadableStream should be errored with TypeError values
https://bugs.webkit.org/show_bug.cgi?id=162895
Summary [Fetch API] ReadableStream should be errored with TypeError values
youenn fablet
Reported 2016-10-04 03:26:58 PDT
As per fetch spec.
Attachments
Patch (7.66 KB, patch)
2016-10-04 03:30 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2016-10-04 03:30:56 PDT
WebKit Commit Bot
Comment 2 2016-10-04 08:20:02 PDT
Comment on attachment 290588 [details] Patch Clearing flags on attachment: 290588 Committed r206770: <http://trac.webkit.org/changeset/206770>
WebKit Commit Bot
Comment 3 2016-10-04 08:20:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.