[Fetch API] ReadableStream should be errored with TypeError values https://bugs.webkit.org/show_bug.cgi?id=162895

Patch by Youenn Fablet <youenn@apple.com> on 2016-10-04
Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

* web-platform-tests/fetch/api/basic/error-after-response-expected.txt: Added.
* web-platform-tests/fetch/api/basic/error-after-response.html: Added.
* web-platform-tests/fetch/api/resources/bad-chunk-encoding.py: Added.
(main):
* web-platform-tests/fetch/api/response/response-consume-stream-expected.txt:

Source/WebCore:

Test: imported/w3c/web-platform-tests/fetch/api/basic/error-after-response.html

* Modules/fetch/FetchResponse.cpp:
(WebCore::FetchResponse::BodyLoader::didFail): Removing FIXME.
* bindings/js/ReadableStreamDefaultController.h:
(WebCore::ReadableStreamDefaultController::error<String>): Erroring with TypeError values.

Canonical link: https://commits.webkit.org/180827@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206770 268f45cc-cd09-0410-ab3c-d52691b4dbfc